# zenoh-cli

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yaml
src/: command.rs  main.rs  ui.rs
tests/: cli.rs  zenoht.rs
tests/snapshots/: cli__deleting_a_value.snap  cli__getting_a_non_existent_value.snap  cli__getting_a_value.snap  cli__getting_peers.snap  cli__getting_routers.snap  cli__getting_zid.snap  cli__putting_a_value.snap  cli__subscribing_to_a_keyexpr.snap
