[package]
name = "zenoh-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
zenoh = "1.5.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
rustyline = "17.0.2"
colored = "3"

[dev-dependencies]
insta = "1.43.1"
insta-cmd = "0.6.0"
tempdir = "0.3.7"
port_check = "0.3.0"
serde = "1.0.228"
serde_json5 = "0.2.1"
